sys/src/bindings/wasm32-wasip1.rs

pub const JSPromiseStateEnum_JS_PROMISE_PENDING: JSPromiseStateEnum = 0;
pub const JSPromiseStateEnum_JS_PROMISE_FULFILLED: JSPromiseStateEnum = 1;
pub const JSPromiseStateEnum_JS_PROMISE_REJECTED: JSPromiseStateEnum = 2;
pub type JSPromiseStateEnum = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn JS_NewPromiseCapability(ctx: *mut JSContext, resolving_funcs: *mut JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_PromiseState(ctx: *mut JSContext, promise: JSValue) -> JSPromiseStateEnum;
}
unsafe extern "C" {
    pub fn JS_PromiseResult(ctx: *mut JSContext, promise: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_IsPromise(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_NewSymbol(
        ctx: *mut JSContext,
        description: *const ::core::ffi::c_char,
        is_global: bool,
    ) -> JSValue;
}
pub const JSPromiseHookType_JS_PROMISE_HOOK_INIT: JSPromiseHookType = 0;
pub const JSPromiseHookType_JS_PROMISE_HOOK_BEFORE: JSPromiseHookType = 1;
pub const JSPromiseHookType_JS_PROMISE_HOOK_AFTER: JSPromiseHookType = 2;
pub const JSPromiseHookType_JS_PROMISE_HOOK_RESOLVE: JSPromiseHookType = 3;
pub type JSPromiseHookType = ::core::ffi::c_uint;
pub type JSPromiseHook = ::core::option::Option<
    unsafe extern "C" fn(
        ctx: *mut JSContext,
        type_: JSPromiseHookType,
        promise: JSValue,
        parent_promise: JSValue,
        opaque: *mut ::core::ffi::c_void,
    ),
>;
unsafe extern "C" {
    pub fn JS_SetPromiseHook(
        rt: *mut JSRuntime,
        promise_hook: JSPromiseHook,
        opaque: *mut ::core::ffi::c_void,
    );
}
pub type JSHostPromiseRejectionTracker = ::core::option::Option<
    unsafe extern "C" fn(
        ctx: *mut JSContext,
        promise: JSValue,
        reason: JSValue,
        is_handled: bool,
        opaque: *mut ::core::ffi::c_void,
    ),
>;
unsafe extern "C" {
    pub fn JS_SetHostPromiseRejectionTracker(
        rt: *mut JSRuntime,
        cb: JSHostPromiseRejectionTracker,
        opaque: *mut ::core::ffi::c_void,
    );
}
pub type JSInterruptHandler = ::core::option::Option<
    unsafe extern "C" fn(
        rt: *mut JSRuntime,
        opaque: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_int,
>;
unsafe extern "C" {
    pub fn JS_SetInterruptHandler(
        rt: *mut JSRuntime,
        cb: JSInterruptHandler,
        opaque: *mut ::core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn JS_SetCanBlock(rt: *mut JSRuntime, can_block: bool);
}
unsafe extern "C" {
    pub fn JS_SetIsHTMLDDA(ctx: *mut JSContext, obj: JSValue);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSModuleDef {
    _unused: [u8; 0],
}
pub type JSModuleNormalizeFunc = ::core::option::Option<
    unsafe extern "C" fn(
        ctx: *mut JSContext,
        module_base_name: *const ::core::ffi::c_char,
        module_name: *const ::core::ffi::c_char,
        opaque: *mut ::core::ffi::c_void,
    ) -> *mut ::core::ffi::c_char,
>;
pub type JSModuleLoaderFunc = ::core::option::Option<
    unsafe extern "C" fn(
        ctx: *mut JSContext,
        module_name: *const ::core::ffi::c_char,
        opaque: *mut ::core::ffi::c_void,
    ) -> *mut JSModuleDef,
>;
unsafe extern "C" {
    pub fn JS_SetModuleLoaderFunc(
        rt: *mut JSRuntime,
        module_normalize: JSModuleNormalizeFunc,
        module_loader: JSModuleLoaderFunc,
        opaque: *mut ::core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn JS_GetImportMeta(ctx: *mut JSContext, m: *mut JSModuleDef) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_GetModuleName(ctx: *mut JSContext, m: *mut JSModuleDef) -> JSAtom;
}
unsafe extern "C" {
    pub fn JS_GetModuleNamespace(ctx: *mut JSContext, m: *mut JSModuleDef) -> JSValue;
}
pub type JSJobFunc = ::core::option::Option<
    unsafe extern "C" fn(
        ctx: *mut JSContext,
        argc: ::core::ffi::c_int,
        argv: *mut JSValue,
    ) -> JSValue,
>;
unsafe extern "C" {
    pub fn JS_EnqueueJob(
        ctx: *mut JSContext,
        job_func: JSJobFunc,
        argc: ::core::ffi::c_int,
        argv: *mut JSValue,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_IsJobPending(rt: *mut JSRuntime) -> bool;
}
unsafe extern "C" {
    pub fn JS_ExecutePendingJob(
        rt: *mut JSRuntime,
        pctx: *mut *mut JSContext,
    ) -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSSABTab {
    pub tab: *mut *mut u8,
    pub len: size_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSSABTab"][::core::mem::size_of::<JSSABTab>() - 8usize];
    ["Alignment of JSSABTab"][::core::mem::align_of::<JSSABTab>() - 4usize];
    ["Offset of field: JSSABTab::tab"][::core::mem::offset_of!(JSSABTab, tab) - 0usize];
    ["Offset of field: JSSABTab::len"][::core::mem::offset_of!(JSSABTab, len) - 4usize];
};
unsafe extern "C" {
    pub fn JS_WriteObject(
        ctx: *mut JSContext,
        psize: *mut size_t,
        obj: JSValue,
        flags: ::core::ffi::c_int,
    ) -> *mut u8;
}
unsafe extern "C" {
    pub fn JS_WriteObject2(
        ctx: *mut JSContext,
        psize: *mut size_t,
        obj: JSValue,
        flags: ::core::ffi::c_int,
        psab_tab: *mut JSSABTab,
    ) -> *mut u8;
}
unsafe extern "C" {
    pub fn JS_ReadObject(
        ctx: *mut JSContext,
        buf: *const u8,
        buf_len: size_t,
        flags: ::core::ffi::c_int,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ReadObject2(
        ctx: *mut JSContext,
        buf: *const u8,
        buf_len: size_t,
        flags: ::core::ffi::c_int,
        psab_tab: *mut JSSABTab,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_EvalFunction(ctx: *mut JSContext, fun_obj: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ResolveModule(ctx: *mut JSContext, obj: JSValue) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn JS_GetScriptOrModuleName(
        ctx: *mut JSContext,
        n_stack_levels: ::core::ffi::c_int,
    ) -> JSAtom;
}
unsafe extern "C" {
    pub fn JS_LoadModule(
        ctx: *mut JSContext,
        basename: *const ::core::ffi::c_char,
        filename: *const ::core::ffi::c_char,
    ) -> JSValue;
}
pub const JSCFunctionEnum_JS_CFUNC_generic: JSCFunctionEnum = 0;
pub const JSCFunctionEnum_JS_CFUNC_generic_magic: JSCFunctionEnum = 1;
pub const JSCFunctionEnum_JS_CFUNC_constructor: JSCFunctionEnum = 2;
pub const JSCFunctionEnum_JS_CFUNC_constructor_magic: JSCFunctionEnum = 3;
pub const JSCFunctionEnum_JS_CFUNC_constructor_or_func: JSCFunctionEnum = 4;
pub const JSCFunctionEnum_JS_CFUNC_constructor_or_func_magic: JSCFunctionEnum = 5;
pub const JSCFunctionEnum_JS_CFUNC_f_f: JSCFunctionEnum = 6;
pub const JSCFunctionEnum_JS_CFUNC_f_f_f: JSCFunctionEnum = 7;
pub const JSCFunctionEnum_JS_CFUNC_getter: JSCFunctionEnum = 8;
pub const JSCFunctionEnum_JS_CFUNC_setter: JSCFunctionEnum = 9;
pub const JSCFunctionEnum_JS_CFUNC_getter_magic: JSCFunctionEnum = 10;
pub const JSCFunctionEnum_JS_CFUNC_setter_magic: JSCFunctionEnum = 11;
pub const JSCFunctionEnum_JS_CFUNC_iterator_next: JSCFunctionEnum = 12;
pub type JSCFunctionEnum = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union JSCFunctionType {
    pub generic: JSCFunction,
    pub generic_magic: ::core::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            this_val: JSValue,
            argc: ::core::ffi::c_int,
            argv: *mut JSValue,
            magic: ::core::ffi::c_int,
        ) -> JSValue,
    >,
    pub constructor: JSCFunction,
    pub constructor_magic: ::core::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            new_target: JSValue,
            argc: ::core::ffi::c_int,
            argv: *mut JSValue,
            magic: ::core::ffi::c_int,
        ) -> JSValue,
    >,
    pub constructor_or_func: JSCFunction,
    pub f_f: ::core::option::Option<unsafe extern "C" fn(arg1: f64) -> f64>,
    pub f_f_f: ::core::option::Option<unsafe extern "C" fn(arg1: f64, arg2: f64) -> f64>,
    pub getter: ::core::option::Option<
        unsafe extern "C" fn(ctx: *mut JSContext, this_val: JSValue) -> JSValue,
    >,
    pub setter: ::core::option::Option<
        unsafe extern "C" fn(ctx: *mut JSContext, this_val: JSValue, val: JSValue) -> JSValue,
    >,
    pub getter_magic: ::core::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            this_val: JSValue,
            magic: ::core::ffi::c_int,
        ) -> JSValue,
    >,
    pub setter_magic: ::core::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            this_val: JSValue,
            val: JSValue,
            magic: ::core::ffi::c_int,
        ) -> JSValue,
    >,
    pub iterator_next: ::core::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            this_val: JSValue,
            argc: ::core::ffi::c_int,
            argv: *mut JSValue,
            pdone: *mut ::core::ffi::c_int,
            magic: ::core::ffi::c_int,
        ) -> JSValue,
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSCFunctionType"][::core::mem::size_of::<JSCFunctionType>() - 4usize];
    ["Alignment of JSCFunctionType"][::core::mem::align_of::<JSCFunctionType>() - 4usize];
    ["Offset of field: JSCFunctionType::generic"]
        [::core::mem::offset_of!(JSCFunctionType, generic) - 0usize];
    ["Offset of field: JSCFunctionType::generic_magic"]
        [::core::mem::offset_of!(JSCFunctionType, generic_magic) - 0usize];
    ["Offset of field: JSCFunctionType::constructor"]
        [::core::mem::offset_of!(JSCFunctionType, constructor) - 0usize];
    ["Offset of field: JSCFunctionType::constructor_magic"]
        [::core::mem::offset_of!(JSCFunctionType, constructor_magic) - 0usize];
    ["Offset of field: JSCFunctionType::constructor_or_func"]
        [::core::mem::offset_of!(JSCFunctionType, constructor_or_func) - 0usize];
    ["Offset of field: JSCFunctionType::f_f"]
        [::core::mem::offset_of!(JSCFunctionType, f_f) - 0usize];
    ["Offset of field: JSCFunctionType::f_f_f"]
        [::core::mem::offset_of!(JSCFunctionType, f_f_f) - 0usize];
    ["Offset of field: JSCFunctionType::getter"]
        [::core::mem::offset_of!(JSCFunctionType, getter) - 0usize];
    ["Offset of field: JSCFunctionType::setter"]
        [::core::mem::offset_of!(JSCFunctionType, setter) - 0usize];
    ["Offset of field: JSCFunctionType::getter_magic"]
        [::core::mem::offset_of!(JSCFunctionType, getter_magic) - 0usize];
    ["Offset of field: JSCFunctionType::setter_magic"]
        [::core::mem::offset_of!(JSCFunctionType, setter_magic) - 0usize];
    ["Offset of field: JSCFunctionType::iterator_next"]
        [::core::mem::offset_of!(JSCFunctionType, iterator_next) - 0usize];
};
unsafe extern "C" {
    pub fn JS_NewCFunction2(
        ctx: *mut JSContext,
        func: JSCFunction,
        name: *const ::core::ffi::c_char,
        length: ::core::ffi::c_int,
        cproto: JSCFunctionEnum,
        magic: ::core::ffi::c_int,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewCFunction3(
        ctx: *mut JSContext,
        func: JSCFunction,
        name: *const ::core::ffi::c_char,
        length: ::core::ffi::c_int,
        cproto: JSCFunctionEnum,
        magic: ::core::ffi::c_int,
        proto_val: JSValue,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewCFunctionData(
        ctx: *mut JSContext,
        func: JSCFunctionData,
        length: ::core::ffi::c_int,
        magic: ::core::ffi::c_int,
        data_len: ::core::ffi::c_int,
        data: *mut JSValue,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewCFunctionData2(
        ctx: *mut JSContext,
        func: JSCFunctionData,
        name: *const ::core::ffi::c_char,
        length: ::core::ffi::c_int,
        magic: ::core::ffi::c_int,
        data_len: ::core::ffi::c_int,
        data: *mut JSValue,
    ) -> JSValue;
}
